--- a/dircetur/css/navbar.css
+++ b/dircetur/css/navbar.css
@@ -15,21 +15,65 @@ body{
 	text-align: center;
 	padding: 15px;
 	text-decoration: none;
-	font-size: 20px;
-}
-
-.navbar a:hover{
-	background-color: #ffffff;
-	color: #ff0000;
+	font-size: 15px;
 }
 
 .navbar .icon{
 	display: none;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+.dropdown{
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 15px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #980000;
+  color: white;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the navbar (.icon) */
 @media screen and (max-width: 600px) {
-  .navbar a:not(:first-child) {display: none;}
+  .navbar a:not(:first-child), .dropdown .dropbtn {display: none;}
   .navbar a.icon {
     float: right;
     display: block;
@@ -49,5 +93,14 @@ body{
     display: block;
     text-align: left;
   }
+  .navbar.responsive .dropdown {float: none;}
+  .navbar.responsive .dropdown-content {position: relative;}
+  .navbar.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
+
+/*menu desplegable*/
 
