--- a/dircetur/css/index.css
+++ b/dircetur/css/index.css
@@ -1,6 +1,6 @@
 html{
-  /*background-image: url(../images/bg-mapa_3.jpg);*/
-  background-color: gray;
+  background-image: url(../images/bg-mapa_3.jpg);
+  /*background-color: gray;*/
   height: 100%;
   background-position: center;
   background-repeat: no-repeat  
