--- a/dircetur/css/admin-index.css
+++ b/dircetur/css/admin-index.css
@@ -1,5 +1,12 @@
 * {box-sizing: border-box}
-body {font-family: "Lato", sans-serif;}
+body {
+    font-family: "Lato", sans-serif;
+    width:1024px;
+    height:1020px;
+    margin:0 auto;}
+
+
+
 
 /* Style the tab */
 .tab {
